Virtual hero list tablet size overflow fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -417,7 +417,7 @@ input {
 
   /* Me quede aqui */
   .virtual-assistant-hero h2 {
-    font-size: 6vw;
+    font-size: 5vw;
     font-weight: 800;
   }
 
@@ -458,7 +458,7 @@ input {
   }
 
   .hero-left-banner li {
-    font-size: 4vw;
+    font-size: 3.5vw;
     font-weight: 600;
   }
 
